debug makefile and github actions

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,10 @@ jobs:
         go-version: 1.15
 
     - name: Build
-      run: make build
+      run: make echo
+
+    - name: git
+      run: git log
 
     - name: Test
       run: mdr --version
