--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-10.15
     steps:
     - uses: actions/checkout@v2
 
@@ -22,7 +22,7 @@ jobs:
       run: make echo
 
     - name: git
-      run: git log
+      run: git version
 
     - name: Test
       run: mdr --version
