--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,8 @@ jobs:
       with:
         go-version: 1.15
 
+    - name: git fetch tags
+      run: git fetch --tags
     - name: Build
       run: make echo
 
