--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,16 +12,19 @@ jobs:
     runs-on: macos-10.15
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
         go-version: 1.15
 
-    - name: git fetch tags
-      run: git fetch --tags
-    - name: Build
+    - name: Echo
       run: make echo
+
+    - name: Build
+      run: make build
 
     - name: git
       run: git version
