--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  setup:
     runs-on: macos-10.15
     steps:
     - uses: actions/checkout@v2
@@ -18,10 +18,17 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.15
+        go-version: 1.16.4
 
-    - name: Build
-      run: make build
+  build:
+    runs-on: macos-10.15
+    needs: [setup]
+    steps:
+    - name: Build Mac Intel
+      run: make build GOOS=darwin GOARCH=amd64
+
+#     - name: Build Mac Apple Silicon
+#       run: make build GOOS=darwin GOARCH=arm64
 
     - name: ls -ltr
       run: ls -ltr
