--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,17 +8,17 @@ on:
 
 jobs:
 
-  setup:
-    runs-on: macos-10.15
-    steps:
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.16.4
+#   setup:
+#     runs-on: macos-10.15
+#     steps:
+#     - name: Set up Go
+#       uses: actions/setup-go@v2
+#       with:
+#         go-version: 1.16.4
 
   build:
     runs-on: macos-10.15
-    needs: [setup]
+#     needs: [setup]
     steps:
     - uses: actions/checkout@v2
       with:
@@ -31,7 +31,7 @@ jobs:
       id: input_id
 
     - name: output
-      run: echo $ {{ steps.input_id.outputs.* }}
+      run: echo ${{ steps.input_id.outputs.* }}
 
 #     - name: Build Mac Intel
 #       run: make build GOOS=darwin GOARCH=amd64
