--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,30 +1,59 @@
 name: Go
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: push
 
 jobs:
 
-  build:
+  setup:
+    name: Setup Go
     runs-on: macos-10.15
+    steps:
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16.4
+
+  build-mac-intel:
+    name: Build Mac Intel
+    runs-on: macos-10.15
+    needs: [setup]
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
+    - name: Build Mac
+      run: echo "::set-output name=binary::$(make build GOOS=darwin GOARCH=amd64)\n"
+      id: input_id
+
+    - name: Test Mac
+      run: ./${{ steps.input_id.outputs.i1 }} --version
+
+  build-mac-m1:
+    name: Build Mac M1/Apple Silicon
+    runs-on: macos-10.15
+    needs: [setup]
+    steps:
+    - uses: actions/checkout@v2
       with:
-        go-version: 1.15
+        fetch-depth: 0
 
-    - name: Build
-      run: make build
+    - name: Build Mac
+      run: echo "::set-output name=binary::$(make build GOOS=darwin GOARCH=arm64)\n"
+      id: input_id
 
-    - name: ls -ltr
-      run: ls -ltr
+    - name: Test Mac
+      run: ./${{ steps.input_id.outputs.i1 }} --version 2>&1 | grep 'bad CPU type'
 
-    - name: Test
-      run: ./mdr --version
+  # Don't think this will work unless I upload the binary artifacts in the build* jobs and then download them here
+  release:
+    runs-on: macos-10.15
+    needs: [build-mac-intel, build-mac-m1]
+    steps:
+      - name: GH Release
+        uses: softprops/action-gh-release@v0.1.5
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: mdr*
