--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,7 +34,10 @@ jobs:
       run: echo ${{ steps.input_id.outputs.i1 }}
 
     - name: git-fu
-      run: echo ${GITHUB_REF#refs/*/}
+      run: |
+        echo ${{ github.ref }}
+        echo $GITHUB_REF
+        echo ${GITHUB_REF#refs/*/}
 
 #     - name: Build Mac Intel
 #       run: make build GOOS=darwin GOARCH=amd64
