--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,59 +1,47 @@
 name: Go
 
-on: push
+on:
+
+  push:
+    branches: [ main ]
+    tags: [ "v*" ]
+  pull_request:
+    branches: [ main ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
 
-  setup:
-    name: Setup Go
+  build-release:
+    name: Build and Release
     runs-on: macos-10.15
     steps:
-    - name: Set up Go
-      uses: actions/setup-go@v2
+
+    - uses: actions/setup-go@v2
       with:
         go-version: 1.16.4
 
-  build-mac-intel:
-    name: Build Mac Intel
-    runs-on: macos-10.15
-    needs: [setup]
-    steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
 
-    - name: Build Mac
-      run: echo "::set-output name=binary::$(make build GOOS=darwin GOARCH=amd64)\n"
-      id: input_id
+    - name: Build Mac Intel
+      run: make build GOOS=darwin GOARCH=amd64
 
-    - name: Test Mac
-      run: ./${{ steps.input_id.outputs.i1 }} --version
+    - name: Test Mac Intel
+      run: ./mdr_v*_amd64 --version
 
-  build-mac-m1:
-    name: Build Mac M1/Apple Silicon
-    runs-on: macos-10.15
-    needs: [setup]
-    steps:
-    - uses: actions/checkout@v2
+    - name: Build Mac M1/Apple Silicon
+      run: make build GOOS=darwin GOARCH=arm64
+
+    - name: Test Mac M1/Apple Silicon
+      run: ./mdr_v*_arm64 --version 2>&1 | grep 'bad CPU type'
+
+    - name: GH Release
+      uses: softprops/action-gh-release@v0.1.5
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        fetch-depth: 0
-
-    - name: Build Mac
-      run: echo "::set-output name=binary::$(make build GOOS=darwin GOARCH=arm64)\n"
-      id: input_id
-
-    - name: Test Mac
-      run: ./${{ steps.input_id.outputs.i1 }} --version 2>&1 | grep 'bad CPU type'
-
-  # Don't think this will work unless I upload the binary artifacts in the build* jobs and then download them here
-  release:
-    runs-on: macos-10.15
-    needs: [build-mac-intel, build-mac-m1]
-    steps:
-      - name: GH Release
-        uses: softprops/action-gh-release@v0.1.5
-        if: startsWith(github.ref, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          files: mdr*
+        files: mdr*
